--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "souvik",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.4",
+    "mongoose-unique-validator": "^2.0.1",
     "path": "^0.12.7"
   }
 }
